alignment issues

--- a/gem/styles/gem-springster/modules/footer/_m-footer-menu.scss
+++ b/gem/styles/gem-springster/modules/footer/_m-footer-menu.scss
@@ -55,9 +55,8 @@
   padding-top: 8px;
   text-align: center;
  .footer-logo {
-    background-image: url('/static/img/sp-footer-logo.png');
+    @include background-cover('/static/img/sp-footer-logo.png');
     background-repeat:  no-repeat;
-    background-size: 100%;
     width: 100%;
     max-width: 200px;
     height: 60px;
