--- a/gem/styles/gem-springster/modules/social-media-icons/_m-share-icons.scss
+++ b/gem/styles/gem-springster/modules/social-media-icons/_m-share-icons.scss
@@ -20,7 +20,7 @@
 }
 
 .call-to-action__nav-item-share--twitter {
-  background: url("/static/img/icons/twitter.png");
+  background-image: url("/static/img/icons/twitter.png");
   background-image: url("/static/img/icons/twitter.svg"),
     linear-gradient(transparent, transparent);
   background-repeat: no-repeat;
@@ -30,7 +30,7 @@
   vertical-align: middle;
 }
 .call-to-action__nav-item-share--facebook {
-  background: url("/static/img/icons/facebook.png");
+  background-image: url("/static/img/icons/facebook.png");
   background-image: url("/static/img/icons/facebook.svg"),
       linear-gradient(transparent, transparent);
   background-repeat: no-repeat;
